<resources>
    <string name="app_name">M2HW5</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="operation_plus">+</string>
    <string name="operation_mines">-</string>
    <string name="operation_divide">/</string>
    <string name="operation_multiply">x</string>
    <string name="operation_AC">AC</string>
    <string name="operation_revers">+/-</string>
    <string name="operation_dot">.</string>
    <string name="operation_equals">=</string>
    <string name="operation_percent">%</string>
    <string name="Next">Next</string>
    <string name="Category">Category</string>
    <string name="free">Free</string>
    <string name="price">Price💰</string>
    <string name="participants">Participants</string>
    <string name="category">Category</string>
    <string name="price1">Price</string>

</resources>